--- a/Iris_Classification/iris.ipynb
+++ b/Iris_Classification/iris.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 601,
+   "execution_count": 892,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 602,
+   "execution_count": 893,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 603,
+   "execution_count": 894,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 604,
+   "execution_count": 895,
    "metadata": {
     "tags": []
    },
@@ -107,7 +107,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "     SepalLengthCm  SepalWidthCm  PetalLengthCm  PetalWidthCm         Species\nId                                                                           \n2              4.9           3.0            1.4           0.2     Iris-setosa\n3              4.7           3.2            1.3           0.2     Iris-setosa\n4              4.6           3.1            1.5           0.2     Iris-setosa\n5              5.0           3.6            1.4           0.2     Iris-setosa\n6              5.4           3.9            1.7           0.4     Iris-setosa\n..             ...           ...            ...           ...             ...\n146            6.7           3.0            5.2           2.3  Iris-virginica\n147            6.3           2.5            5.0           1.9  Iris-virginica\n148            6.5           3.0            5.2           2.0  Iris-virginica\n149            6.2           3.4            5.4           2.3  Iris-virginica\n150            5.9           3.0            5.1           1.8  Iris-virginica\n\n[120 rows x 5 columns]\n(120, 5)\n     SepalLengthCm  SepalWidthCm  PetalLengthCm  PetalWidthCm          Species\nId                                                                            \n1              5.1           3.5            1.4           0.2      Iris-setosa\n8              5.0           3.4            1.5           0.2      Iris-setosa\n14             4.3           3.0            1.1           0.1      Iris-setosa\n18             5.1           3.5            1.4           0.3      Iris-setosa\n25             4.8           3.4            1.9           0.2      Iris-setosa\n26             5.0           3.0            1.6           0.2      Iris-setosa\n31             4.8           3.1            1.6           0.2      Iris-setosa\n37             5.5           3.5            1.3           0.2      Iris-setosa\n39             4.4           3.0            1.3           0.2      Iris-setosa\n45             5.1           3.8            1.9           0.4      Iris-setosa\n51             7.0           3.2            4.7           1.4  Iris-versicolor\n58             4.9           2.4            3.3           1.0  Iris-versicolor\n64             6.1           2.9            4.7           1.4  Iris-versicolor\n68             5.8           2.7            4.1           1.0  Iris-versicolor\n75             6.4           2.9            4.3           1.3  Iris-versicolor\n76             6.6           3.0            4.4           1.4  Iris-versicolor\n81             5.5           2.4            3.8           1.1  Iris-versicolor\n87             6.7           3.1            4.7           1.5  Iris-versicolor\n89             5.6           3.0            4.1           1.3  Iris-versicolor\n95             5.6           2.7            4.2           1.3  Iris-versicolor\n101            6.3           3.3            6.0           2.5   Iris-virginica\n108            7.3           2.9            6.3           1.8   Iris-virginica\n114            5.7           2.5            5.0           2.0   Iris-virginica\n118            7.7           3.8            6.7           2.2   Iris-virginica\n125            6.7           3.3            5.7           2.1   Iris-virginica\n126            7.2           3.2            6.0           1.8   Iris-virginica\n131            7.4           2.8            6.1           1.9   Iris-virginica\n137            6.3           3.4            5.6           2.4   Iris-virginica\n139            6.0           3.0            4.8           1.8   Iris-virginica\n145            6.7           3.3            5.7           2.5   Iris-virginica\n(30, 5)\n"
+      "     SepalLengthCm  SepalWidthCm  PetalLengthCm  PetalWidthCm         Species\nId                                                                           \n1              5.1           3.5            1.4           0.2     Iris-setosa\n2              4.9           3.0            1.4           0.2     Iris-setosa\n3              4.7           3.2            1.3           0.2     Iris-setosa\n4              4.6           3.1            1.5           0.2     Iris-setosa\n5              5.0           3.6            1.4           0.2     Iris-setosa\n..             ...           ...            ...           ...             ...\n144            6.8           3.2            5.9           2.3  Iris-virginica\n145            6.7           3.3            5.7           2.5  Iris-virginica\n146            6.7           3.0            5.2           2.3  Iris-virginica\n147            6.3           2.5            5.0           1.9  Iris-virginica\n148            6.5           3.0            5.2           2.0  Iris-virginica\n\n[120 rows x 5 columns]\n(120, 5)\n     SepalLengthCm  SepalWidthCm  PetalLengthCm  PetalWidthCm          Species\nId                                                                            \n6              5.4           3.9            1.7           0.4      Iris-setosa\n13             4.8           3.0            1.4           0.1      Iris-setosa\n15             5.8           4.0            1.2           0.2      Iris-setosa\n29             5.2           3.4            1.4           0.2      Iris-setosa\n30             4.7           3.2            1.6           0.2      Iris-setosa\n36             5.0           3.2            1.2           0.2      Iris-setosa\n39             4.4           3.0            1.3           0.2      Iris-setosa\n42             4.5           2.3            1.3           0.3      Iris-setosa\n49             5.3           3.7            1.5           0.2      Iris-setosa\n50             5.0           3.3            1.4           0.2      Iris-setosa\n56             5.7           2.8            4.5           1.3  Iris-versicolor\n63             6.0           2.2            4.0           1.0  Iris-versicolor\n65             5.6           2.9            3.6           1.3  Iris-versicolor\n79             6.0           2.9            4.5           1.5  Iris-versicolor\n80             5.7           2.6            3.5           1.0  Iris-versicolor\n86             6.0           3.4            4.5           1.6  Iris-versicolor\n89             5.6           3.0            4.1           1.3  Iris-versicolor\n92             6.1           3.0            4.6           1.4  Iris-versicolor\n99             5.1           2.5            3.0           1.1  Iris-versicolor\n100            5.7           2.8            4.1           1.3  Iris-versicolor\n106            7.6           3.0            6.6           2.1   Iris-virginica\n113            6.8           3.0            5.5           2.1   Iris-virginica\n115            5.8           2.8            5.1           2.4   Iris-virginica\n129            6.4           2.8            5.6           2.1   Iris-virginica\n130            7.2           3.0            5.8           1.6   Iris-virginica\n136            7.7           3.0            6.1           2.3   Iris-virginica\n139            6.0           3.0            4.8           1.8   Iris-virginica\n142            6.9           3.1            5.1           2.3   Iris-virginica\n149            6.2           3.4            5.4           2.3   Iris-virginica\n150            5.9           3.0            5.1           1.8   Iris-virginica\n(30, 5)\n"
      ]
     }
    ],
@@ -137,6 +137,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 896,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# randomize the test and train data\n",
+    "test_data = test_data.sample(frac=1)\n",
+    "train_data = train_data.sample(frac=1)\n",
+    "#print(test_data)\n",
+    "#print(train_data)"
+   ]
+  },
+  {
    "source": [
     "## 4. Usando somente o conjunto de treino, mostre as médias dos valores de cada feature para cada classe."
    ],
@@ -145,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 605,
+   "execution_count": 897,
    "metadata": {},
    "outputs": [
     {
@@ -154,14 +167,14 @@
       "text/plain": [
        "                 SepalLengthCm  SepalWidthCm  PetalLengthCm  PetalWidthCm\n",
        "Species                                                                  \n",
-       "Iris-setosa             5.0300        3.4425         1.4550        0.2500\n",
-       "Iris-versicolor         5.9150        2.7550         4.2675        1.3400\n",
-       "Iris-virginica          6.5525        2.9300         5.4925        2.0075"
+       "Iris-setosa             5.0050        3.4475         1.4800        0.2500\n",
+       "Iris-versicolor         5.9825        2.7600         4.3150        1.3375\n",
+       "Iris-virginica          6.5725        2.9650         5.5625        2.0125"
       ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>SepalLengthCm</th>\n      <th>SepalWidthCm</th>\n      <th>PetalLengthCm</th>\n      <th>PetalWidthCm</th>\n    </tr>\n    <tr>\n      <th>Species</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>Iris-setosa</th>\n      <td>5.0300</td>\n      <td>3.4425</td>\n      <td>1.4550</td>\n      <td>0.2500</td>\n    </tr>\n    <tr>\n      <th>Iris-versicolor</th>\n      <td>5.9150</td>\n      <td>2.7550</td>\n      <td>4.2675</td>\n      <td>1.3400</td>\n    </tr>\n    <tr>\n      <th>Iris-virginica</th>\n      <td>6.5525</td>\n      <td>2.9300</td>\n      <td>5.4925</td>\n      <td>2.0075</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>SepalLengthCm</th>\n      <th>SepalWidthCm</th>\n      <th>PetalLengthCm</th>\n      <th>PetalWidthCm</th>\n    </tr>\n    <tr>\n      <th>Species</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>Iris-setosa</th>\n      <td>5.0050</td>\n      <td>3.4475</td>\n      <td>1.4800</td>\n      <td>0.2500</td>\n    </tr>\n    <tr>\n      <th>Iris-versicolor</th>\n      <td>5.9825</td>\n      <td>2.7600</td>\n      <td>4.3150</td>\n      <td>1.3375</td>\n    </tr>\n    <tr>\n      <th>Iris-virginica</th>\n      <td>6.5725</td>\n      <td>2.9650</td>\n      <td>5.5625</td>\n      <td>2.0125</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 605
+     "execution_count": 897
     }
    ],
    "source": [
@@ -177,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 606,
+   "execution_count": 898,
    "metadata": {},
    "outputs": [
     {
@@ -186,18 +199,18 @@
       "text/plain": [
        "       SepalLengthCm  SepalWidthCm  PetalLengthCm  PetalWidthCm\n",
        "count     120.000000    120.000000     120.000000    120.000000\n",
-       "mean        5.832500      3.042500       3.738333      1.199167\n",
-       "std         0.801277      0.450334       1.748958      0.755651\n",
-       "min         4.400000      2.000000       1.000000      0.100000\n",
-       "25%         5.100000      2.800000       1.500000      0.300000\n",
+       "mean        5.853333      3.057500       3.785833      1.200000\n",
+       "std         0.829086      0.443186       1.766319      0.757706\n",
+       "min         4.300000      2.000000       1.000000      0.100000\n",
+       "25%         5.100000      2.800000       1.600000      0.300000\n",
        "50%         5.800000      3.000000       4.400000      1.300000\n",
-       "75%         6.400000      3.300000       5.100000      1.800000\n",
+       "75%         6.425000      3.325000       5.100000      1.800000\n",
        "max         7.900000      4.400000       6.900000      2.500000"
       ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>SepalLengthCm</th>\n      <th>SepalWidthCm</th>\n      <th>PetalLengthCm</th>\n      <th>PetalWidthCm</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>count</th>\n      <td>120.000000</td>\n      <td>120.000000</td>\n      <td>120.000000</td>\n      <td>120.000000</td>\n    </tr>\n    <tr>\n      <th>mean</th>\n      <td>5.832500</td>\n      <td>3.042500</td>\n      <td>3.738333</td>\n      <td>1.199167</td>\n    </tr>\n    <tr>\n      <th>std</th>\n      <td>0.801277</td>\n      <td>0.450334</td>\n      <td>1.748958</td>\n      <td>0.755651</td>\n    </tr>\n    <tr>\n      <th>min</th>\n      <td>4.400000</td>\n      <td>2.000000</td>\n      <td>1.000000</td>\n      <td>0.100000</td>\n    </tr>\n    <tr>\n      <th>25%</th>\n      <td>5.100000</td>\n      <td>2.800000</td>\n      <td>1.500000</td>\n      <td>0.300000</td>\n    </tr>\n    <tr>\n      <th>50%</th>\n      <td>5.800000</td>\n      <td>3.000000</td>\n      <td>4.400000</td>\n      <td>1.300000</td>\n    </tr>\n    <tr>\n      <th>75%</th>\n      <td>6.400000</td>\n      <td>3.300000</td>\n      <td>5.100000</td>\n      <td>1.800000</td>\n    </tr>\n    <tr>\n      <th>max</th>\n      <td>7.900000</td>\n      <td>4.400000</td>\n      <td>6.900000</td>\n      <td>2.500000</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>SepalLengthCm</th>\n      <th>SepalWidthCm</th>\n      <th>PetalLengthCm</th>\n      <th>PetalWidthCm</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>count</th>\n      <td>120.000000</td>\n      <td>120.000000</td>\n      <td>120.000000</td>\n      <td>120.000000</td>\n    </tr>\n    <tr>\n      <th>mean</th>\n      <td>5.853333</td>\n      <td>3.057500</td>\n      <td>3.785833</td>\n      <td>1.200000</td>\n    </tr>\n    <tr>\n      <th>std</th>\n      <td>0.829086</td>\n      <td>0.443186</td>\n      <td>1.766319</td>\n      <td>0.757706</td>\n    </tr>\n    <tr>\n      <th>min</th>\n      <td>4.300000</td>\n      <td>2.000000</td>\n      <td>1.000000</td>\n      <td>0.100000</td>\n    </tr>\n    <tr>\n      <th>25%</th>\n      <td>5.100000</td>\n      <td>2.800000</td>\n      <td>1.600000</td>\n      <td>0.300000</td>\n    </tr>\n    <tr>\n      <th>50%</th>\n      <td>5.800000</td>\n      <td>3.000000</td>\n      <td>4.400000</td>\n      <td>1.300000</td>\n    </tr>\n    <tr>\n      <th>75%</th>\n      <td>6.425000</td>\n      <td>3.325000</td>\n      <td>5.100000</td>\n      <td>1.800000</td>\n    </tr>\n    <tr>\n      <th>max</th>\n      <td>7.900000</td>\n      <td>4.400000</td>\n      <td>6.900000</td>\n      <td>2.500000</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 606
+     "execution_count": 898
     }
    ],
    "source": [
@@ -207,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 607,
+   "execution_count": 899,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,20 +275,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 608,
+   "execution_count": 900,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "['Iris_setosa' 'Iris_setosa' 'Iris_setosa' 'Iris_setosa' 'Iris_setosa'\n 'Iris_setosa' 'Iris_setosa' 'Iris_setosa' 'Iris_setosa' 'Iris_setosa'\n 'Iris_versicolor' 'Iris_versicolor' 'Iris_versicolor' 'Iris_versicolor'\n 'Iris_versicolor' 'Iris_versicolor' 'Iris_versicolor' 'Iris_versicolor'\n 'Iris_versicolor' 'Iris_versicolor' 'Iris_virginica' 'Iris_virginica'\n 'Iris_virginica' 'Iris_virginica' 'Iris_virginica' 'Iris_virginica'\n 'Iris_versicolor' 'Iris_virginica' 'Iris_virginica' 'Iris_virginica']\n"
+      "['Iris-setosa' 'Iris-versicolor' 'Iris-versicolor' 'Iris-virginica'\n 'Iris-virginica' 'Iris-setosa' 'Iris-versicolor' 'Iris-versicolor'\n 'Iris-virginica' 'Iris-virginica' 'Iris-virginica' 'Iris-setosa'\n 'Iris-versicolor' 'Iris-setosa' 'Iris-setosa' 'Iris-setosa' 'Iris-setosa'\n 'Iris-setosa' 'Iris-versicolor' 'Iris-virginica' 'Iris-versicolor'\n 'Iris-virginica' 'Iris-virginica' 'Iris-versicolor' 'Iris-versicolor'\n 'Iris-versicolor' 'Iris-setosa' 'Iris-setosa' 'Iris-versicolor'\n 'Iris-virginica']\n"
      ]
     }
    ],
    "source": [
     "predicted_values = personal_classifier(test_data)\n",
-    "print(result)"
+    "print(predicted_values)"
    ]
   },
   {
@@ -287,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 609,
+   "execution_count": 901,
    "metadata": {},
    "outputs": [
     {
