--- a/kNN_Class/kNN.ipynb
+++ b/kNN_Class/kNN.ipynb
@@ -214,18 +214,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 231,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "array(True)"
+       "array([ True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        True, False,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        True,  True,  True, False,  True,  True,  True,  True,  True,\n",
+       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        True, False,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        True,  True, False,  True,  True,  True,  True,  True,  True,\n",
+       "        True,  True, False,  True,  True,  True,  True,  True,  True,\n",
+       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "       False, False, False,  True,  True,  True,  True,  True,  True,\n",
+       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        True,  True, False,  True,  True,  True,  True,  True,  True,\n",
+       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        True,  True,  True,  True,  True,  True,  True,  True,  True])"
       ]
      },
      "metadata": {},
-     "execution_count": 230
+     "execution_count": 231
     }
    ],
    "source": [
