--- a/Iris_Classification/iris.ipynb
+++ b/Iris_Classification/iris.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 524,
+   "execution_count": 699,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 525,
+   "execution_count": 700,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 526,
+   "execution_count": 701,
    "metadata": {},
    "outputs": [
     {
@@ -98,21 +98,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 527,
+   "execution_count": 702,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "output_type": "error",
-     "ename": "TypeError",
-     "evalue": "randint() got an unexpected keyword argument 'random_state'",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-527-e2caa06fad9d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mindex\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32mwhile\u001b[0m \u001b[0mindex\u001b[0m \u001b[1;33m<\u001b[0m \u001b[1;36m10\u001b[0m \u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m     \u001b[0mnum\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrandint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m50\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrandom_state\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# create 10 random values to set True on the a_train indexes\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0ma_test\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mnum\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;32mFalse\u001b[0m \u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m         \u001b[0ma_test\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mnum\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mTrue\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mmtrand.pyx\u001b[0m in \u001b[0;36mnumpy.random.mtrand.RandomState.randint\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: randint() got an unexpected keyword argument 'random_state'"
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "     SepalLengthCm  SepalWidthCm  PetalLengthCm  PetalWidthCm         Species\nId                                                                           \n1              5.1           3.5            1.4           0.2     Iris-setosa\n2              4.9           3.0            1.4           0.2     Iris-setosa\n3              4.7           3.2            1.3           0.2     Iris-setosa\n4              4.6           3.1            1.5           0.2     Iris-setosa\n5              5.0           3.6            1.4           0.2     Iris-setosa\n..             ...           ...            ...           ...             ...\n146            6.7           3.0            5.2           2.3  Iris-virginica\n147            6.3           2.5            5.0           1.9  Iris-virginica\n148            6.5           3.0            5.2           2.0  Iris-virginica\n149            6.2           3.4            5.4           2.3  Iris-virginica\n150            5.9           3.0            5.1           1.8  Iris-virginica\n\n[120 rows x 5 columns]\n(120, 5)\n     SepalLengthCm  SepalWidthCm  PetalLengthCm  PetalWidthCm          Species\nId                                                                            \n8              5.0           3.4            1.5           0.2      Iris-setosa\n11             5.4           3.7            1.5           0.2      Iris-setosa\n15             5.8           4.0            1.2           0.2      Iris-setosa\n19             5.7           3.8            1.7           0.3      Iris-setosa\n21             5.4           3.4            1.7           0.2      Iris-setosa\n23             4.6           3.6            1.0           0.2      Iris-setosa\n24             5.1           3.3            1.7           0.5      Iris-setosa\n29             5.2           3.4            1.4           0.2      Iris-setosa\n39             4.4           3.0            1.3           0.2      Iris-setosa\n43             4.4           3.2            1.3           0.2      Iris-setosa\n58             4.9           2.4            3.3           1.0  Iris-versicolor\n61             5.0           2.0            3.5           1.0  Iris-versicolor\n65             5.6           2.9            3.6           1.3  Iris-versicolor\n69             6.2           2.2            4.5           1.5  Iris-versicolor\n71             5.9           3.2            4.8           1.8  Iris-versicolor\n73             6.3           2.5            4.9           1.5  Iris-versicolor\n74             6.1           2.8            4.7           1.2  Iris-versicolor\n79             6.0           2.9            4.5           1.5  Iris-versicolor\n89             5.6           3.0            4.1           1.3  Iris-versicolor\n93             5.8           2.6            4.0           1.2  Iris-versicolor\n108            7.3           2.9            6.3           1.8   Iris-virginica\n111            6.5           3.2            5.1           2.0   Iris-virginica\n115            5.8           2.8            5.1           2.4   Iris-virginica\n119            7.7           2.6            6.9           2.3   Iris-virginica\n121            6.9           3.2            5.7           2.3   Iris-virginica\n123            7.7           2.8            6.7           2.0   Iris-virginica\n124            6.3           2.7            4.9           1.8   Iris-virginica\n129            6.4           2.8            5.6           2.1   Iris-virginica\n139            6.0           3.0            4.8           1.8   Iris-virginica\n143            5.8           2.7            5.1           1.9   Iris-virginica\n(30, 5)\n"
      ]
     }
    ],
@@ -120,8 +115,9 @@
     "# list to separete train data (80% - 120 observations) and test data (20% - 30 observations)\n",
     "a_test = np.array([False]*50)\n",
     "index = 0\n",
+    "np.random.seed(42)\n",
     "while index < 10 :\n",
-    "    num = np.random.randint(0,50, random_state=1) # create 10 random values to set True on the a_train indexes\n",
+    "    num = np.random.randint(0,50) # create 10 random values to set True on the a_train indexes\n",
     "    if a_test[num] == False :\n",
     "        a_test[num] = True\n",
     "        index += 1\n",
@@ -143,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 450,
+   "execution_count": 703,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 451,
+   "execution_count": 704,
    "metadata": {},
    "outputs": [
     {
@@ -172,14 +168,14 @@
       "text/plain": [
        "                 SepalLengthCm  SepalWidthCm  PetalLengthCm  PetalWidthCm\n",
        "Species                                                                  \n",
-       "Iris-setosa             5.0250        3.4375         1.4575        0.2350\n",
-       "Iris-versicolor         5.9850        2.7875         4.2950        1.3525\n",
-       "Iris-virginica          6.5975        3.0225         5.5675        2.0500"
+       "Iris-setosa             4.9825        3.4025         1.4725        0.2450\n",
+       "Iris-versicolor         5.9850        2.8000         4.2775        1.3250\n",
+       "Iris-virginica          6.5750        3.0000         5.5350        2.0225"
       ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>SepalLengthCm</th>\n      <th>SepalWidthCm</th>\n      <th>PetalLengthCm</th>\n      <th>PetalWidthCm</th>\n    </tr>\n    <tr>\n      <th>Species</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>Iris-setosa</th>\n      <td>5.0250</td>\n      <td>3.4375</td>\n      <td>1.4575</td>\n      <td>0.2350</td>\n    </tr>\n    <tr>\n      <th>Iris-versicolor</th>\n      <td>5.9850</td>\n      <td>2.7875</td>\n      <td>4.2950</td>\n      <td>1.3525</td>\n    </tr>\n    <tr>\n      <th>Iris-virginica</th>\n      <td>6.5975</td>\n      <td>3.0225</td>\n      <td>5.5675</td>\n      <td>2.0500</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>SepalLengthCm</th>\n      <th>SepalWidthCm</th>\n      <th>PetalLengthCm</th>\n      <th>PetalWidthCm</th>\n    </tr>\n    <tr>\n      <th>Species</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>Iris-setosa</th>\n      <td>4.9825</td>\n      <td>3.4025</td>\n      <td>1.4725</td>\n      <td>0.2450</td>\n    </tr>\n    <tr>\n      <th>Iris-versicolor</th>\n      <td>5.9850</td>\n      <td>2.8000</td>\n      <td>4.2775</td>\n      <td>1.3250</td>\n    </tr>\n    <tr>\n      <th>Iris-virginica</th>\n      <td>6.5750</td>\n      <td>3.0000</td>\n      <td>5.5350</td>\n      <td>2.0225</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 451
+     "execution_count": 704
     }
    ],
    "source": [
@@ -195,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 452,
+   "execution_count": 705,
    "metadata": {},
    "outputs": [
     {
@@ -204,18 +200,18 @@
       "text/plain": [
        "       SepalLengthCm  SepalWidthCm  PetalLengthCm  PetalWidthCm\n",
        "count     120.000000    120.000000     120.000000    120.000000\n",
-       "mean        5.869167      3.082500       3.773333      1.212500\n",
-       "std         0.829072      0.433989       1.776681      0.777149\n",
-       "min         4.400000      2.000000       1.000000      0.100000\n",
-       "25%         5.200000      2.800000       1.500000      0.300000\n",
-       "50%         5.800000      3.000000       4.350000      1.300000\n",
-       "75%         6.400000      3.400000       5.100000      1.800000\n",
-       "max         7.900000      4.400000       6.900000      2.500000"
+       "mean        5.847500      3.067500       3.761667      1.197500\n",
+       "std         0.825534      0.427453       1.749823      0.762731\n",
+       "min         4.300000      2.200000       1.100000      0.100000\n",
+       "25%         5.100000      2.800000       1.575000      0.300000\n",
+       "50%         5.750000      3.000000       4.350000      1.300000\n",
+       "75%         6.425000      3.300000       5.100000      1.800000\n",
+       "max         7.900000      4.400000       6.700000      2.500000"
       ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>SepalLengthCm</th>\n      <th>SepalWidthCm</th>\n      <th>PetalLengthCm</th>\n      <th>PetalWidthCm</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>count</th>\n      <td>120.000000</td>\n      <td>120.000000</td>\n      <td>120.000000</td>\n      <td>120.000000</td>\n    </tr>\n    <tr>\n      <th>mean</th>\n      <td>5.869167</td>\n      <td>3.082500</td>\n      <td>3.773333</td>\n      <td>1.212500</td>\n    </tr>\n    <tr>\n      <th>std</th>\n      <td>0.829072</td>\n      <td>0.433989</td>\n      <td>1.776681</td>\n      <td>0.777149</td>\n    </tr>\n    <tr>\n      <th>min</th>\n      <td>4.400000</td>\n      <td>2.000000</td>\n      <td>1.000000</td>\n      <td>0.100000</td>\n    </tr>\n    <tr>\n      <th>25%</th>\n      <td>5.200000</td>\n      <td>2.800000</td>\n      <td>1.500000</td>\n      <td>0.300000</td>\n    </tr>\n    <tr>\n      <th>50%</th>\n      <td>5.800000</td>\n      <td>3.000000</td>\n      <td>4.350000</td>\n      <td>1.300000</td>\n    </tr>\n    <tr>\n      <th>75%</th>\n      <td>6.400000</td>\n      <td>3.400000</td>\n      <td>5.100000</td>\n      <td>1.800000</td>\n    </tr>\n    <tr>\n      <th>max</th>\n      <td>7.900000</td>\n      <td>4.400000</td>\n      <td>6.900000</td>\n      <td>2.500000</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>SepalLengthCm</th>\n      <th>SepalWidthCm</th>\n      <th>PetalLengthCm</th>\n      <th>PetalWidthCm</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>count</th>\n      <td>120.000000</td>\n      <td>120.000000</td>\n      <td>120.000000</td>\n      <td>120.000000</td>\n    </tr>\n    <tr>\n      <th>mean</th>\n      <td>5.847500</td>\n      <td>3.067500</td>\n      <td>3.761667</td>\n      <td>1.197500</td>\n    </tr>\n    <tr>\n      <th>std</th>\n      <td>0.825534</td>\n      <td>0.427453</td>\n      <td>1.749823</td>\n      <td>0.762731</td>\n    </tr>\n    <tr>\n      <th>min</th>\n      <td>4.300000</td>\n      <td>2.200000</td>\n      <td>1.100000</td>\n      <td>0.100000</td>\n    </tr>\n    <tr>\n      <th>25%</th>\n      <td>5.100000</td>\n      <td>2.800000</td>\n      <td>1.575000</td>\n      <td>0.300000</td>\n    </tr>\n    <tr>\n      <th>50%</th>\n      <td>5.750000</td>\n      <td>3.000000</td>\n      <td>4.350000</td>\n      <td>1.300000</td>\n    </tr>\n    <tr>\n      <th>75%</th>\n      <td>6.425000</td>\n      <td>3.300000</td>\n      <td>5.100000</td>\n      <td>1.800000</td>\n    </tr>\n    <tr>\n      <th>max</th>\n      <td>7.900000</td>\n      <td>4.400000</td>\n      <td>6.700000</td>\n      <td>2.500000</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 452
+     "execution_count": 705
     }
    ],
    "source": [
@@ -225,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 453,
+   "execution_count": 706,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +234,6 @@
     "    classification = \"\"\n",
     "\n",
     "    train_petal_info = train_data.groupby(\"Species\").mean()\n",
-    "    print(train_petal_info)\n",
     "    train_petal_info = train_petal_info[[\"PetalLengthCm\", \"PetalWidthCm\"]]\n",
     "    np_train_petal_lenght = np.array(train_petal_info.iloc[:, 0])\n",
     "    np_train_petal_width = np.array(train_petal_info.iloc[:, 1])\n",
@@ -279,14 +274,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 454,
+   "execution_count": 707,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "                 SepalLengthCm  SepalWidthCm  PetalLengthCm  PetalWidthCm\nSpecies                                                                  \nIris-setosa             5.0250        3.4375         1.4575        0.2350\nIris-versicolor         5.9850        2.7875         4.2950        1.3525\nIris-virginica          6.5975        3.0225         5.5675        2.0500\n['Iris-virginica' 'Iris-versicolor' 'Iris-virginica' 'Iris-versicolor'\n 'Iris-setosa' 'Iris-setosa' 'Iris-virginica' 'Iris-versicolor'\n 'Iris-versicolor' 'Iris-setosa' 'Iris-setosa' 'Iris-versicolor'\n 'Iris-setosa' 'Iris-versicolor' 'Iris-versicolor' 'Iris-virginica'\n 'Iris-setosa' 'Iris-setosa' 'Iris-virginica' 'Iris-setosa'\n 'Iris-virginica' 'Iris-virginica' 'Iris-versicolor' 'Iris-virginica'\n 'Iris-virginica' 'Iris-setosa' 'Iris-versicolor' 'Iris-versicolor'\n 'Iris-versicolor' 'Iris-setosa']\n"
+      "['Iris-virginica' 'Iris-versicolor' 'Iris-virginica' 'Iris-versicolor'\n 'Iris-setosa' 'Iris-setosa' 'Iris-versicolor' 'Iris-virginica'\n 'Iris-versicolor' 'Iris-setosa' 'Iris-setosa' 'Iris-versicolor'\n 'Iris-setosa' 'Iris-versicolor' 'Iris-versicolor' 'Iris-virginica'\n 'Iris-setosa' 'Iris-setosa' 'Iris-virginica' 'Iris-setosa'\n 'Iris-virginica' 'Iris-versicolor' 'Iris-versicolor' 'Iris-virginica'\n 'Iris-virginica' 'Iris-setosa' 'Iris-versicolor' 'Iris-versicolor'\n 'Iris-versicolor' 'Iris-setosa']\n"
      ]
     }
    ],
@@ -304,14 +299,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 455,
+   "execution_count": 708,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "96.67 %\n"
+      "93.33 %\n"
      ]
     }
    ],
