--- a/kNN_Classification/white_wine.ipynb
+++ b/kNN_Classification/white_wine.ipynb
@@ -10,12 +10,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.10"
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python385jvsc74a57bd01f09bd18c3bd6ca7f9726fc8dcfe1413a5b5683c291aaa94868dd31b44d43b4e",
-   "display_name": "Python 3.8.5 64-bit ('base': conda)"
+   "name": "python3810jvsc74a57bd06a9d193666e13d3b25b51d102bf5ec435779a8e8c05a2ee5783b187e30809c30",
+   "display_name": "Python 3.8.10 64-bit ('DataScience': conda)"
   }
  },
  "nbformat": 4,
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>fixed acidity</th>\n      <th>volatile acidity</th>\n      <th>citric acid</th>\n      <th>residual sugar</th>\n      <th>chlorides</th>\n      <th>free sulfur dioxide</th>\n      <th>total sulfur dioxide</th>\n      <th>density</th>\n      <th>pH</th>\n      <th>sulphates</th>\n      <th>alcohol</th>\n      <th>quality</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>7.0</td>\n      <td>0.27</td>\n      <td>0.36</td>\n      <td>20.7</td>\n      <td>0.045</td>\n      <td>45.0</td>\n      <td>170.0</td>\n      <td>1.0010</td>\n      <td>3.00</td>\n      <td>0.45</td>\n      <td>8.8</td>\n      <td>6</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>6.3</td>\n      <td>0.30</td>\n      <td>0.34</td>\n      <td>1.6</td>\n      <td>0.049</td>\n      <td>14.0</td>\n      <td>132.0</td>\n      <td>0.9940</td>\n      <td>3.30</td>\n      <td>0.49</td>\n      <td>9.5</td>\n      <td>6</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>8.1</td>\n      <td>0.28</td>\n      <td>0.40</td>\n      <td>6.9</td>\n      <td>0.050</td>\n      <td>30.0</td>\n      <td>97.0</td>\n      <td>0.9951</td>\n      <td>3.26</td>\n      <td>0.44</td>\n      <td>10.1</td>\n      <td>6</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>7.2</td>\n      <td>0.23</td>\n      <td>0.32</td>\n      <td>8.5</td>\n      <td>0.058</td>\n      <td>47.0</td>\n      <td>186.0</td>\n      <td>0.9956</td>\n      <td>3.19</td>\n      <td>0.40</td>\n      <td>9.9</td>\n      <td>6</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>7.2</td>\n      <td>0.23</td>\n      <td>0.32</td>\n      <td>8.5</td>\n      <td>0.058</td>\n      <td>47.0</td>\n      <td>186.0</td>\n      <td>0.9956</td>\n      <td>3.19</td>\n      <td>0.40</td>\n      <td>9.9</td>\n      <td>6</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 120
+     "execution_count": 2
     }
    ],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 121
+     "execution_count": 3
     }
    ],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 123
+     "execution_count": 5
     }
    ],
    "source": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,13 +223,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# treinando o modelo\n",
     "for idx in range(quantidade_de_modelos) :\n",
-    "    modelokNN[idx].fit(X_treino, y_treino)"
+    "    modelokNN[idx].fit(X_train, y_train)"
    ]
   },
   {
@@ -241,18 +241,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[0.5544217687074829, 0.47891156462585033, 0.45918367346938777, 0.47210884353741495, 0.46462585034013604, 0.4605442176870748, 0.45714285714285713, 0.4748299319727891, 0.4639455782312925, 0.46530612244897956, 0.4448979591836735, 0.4530612244897959, 0.4414965986394558, 0.42857142857142855, 0.44013605442176873, 0.4340136054421769, 0.4346938775510204, 0.42993197278911566, 0.43945578231292515, 0.44013605442176873, 0.43537414965986393, 0.43333333333333335, 0.4387755102040816, 0.44081632653061226, 0.43197278911564624, 0.4421768707482993, 0.4380952380952381, 0.4387755102040816, 0.4448979591836735, 0.43945578231292515, 0.43673469387755104, 0.43945578231292515, 0.4421768707482993, 0.44421768707482995, 0.4496598639455782, 0.44829931972789117, 0.44761904761904764, 0.45170068027210886, 0.45510204081632655, 0.45034013605442175, 0.45374149659863944, 0.4435374149659864, 0.45102040816326533, 0.4530612244897959, 0.4557823129251701, 0.45782312925170066, 0.4564625850340136, 0.4605442176870748, 0.45374149659863944, 0.46122448979591835]\n"
+     ]
+    }
+   ],
    "source": [
     "acuracy = []\n",
     "for idx in range(quantidade_de_modelos) :\n",
-    "    acuracy.append(modelokNN[idx].score(X_test, y_test))"
+    "    acuracy.append(modelokNN[idx].score(X_test, y_test))\n",
+    "print(acuracy)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +272,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 129
+     "execution_count": 12
     }
    ],
    "source": [
