--- a/atividade05/kNN_Regression.ipynb
+++ b/atividade05/kNN_Regression.ipynb
@@ -10,12 +10,15 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.5"
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python3810jvsc74a57bd06a9d193666e13d3b25b51d102bf5ec435779a8e8c05a2ee5783b187e30809c30",
-   "display_name": "Python 3.8.10 64-bit ('DataScience': conda)"
+   "name": "python3",
+   "display_name": "Python 3.8.5 64-bit ('base': conda)"
+  },
+  "interpreter": {
+   "hash": "1f09bd18c3bd6ca7f9726fc8dcfe1413a5b5683c291aaa94868dd31b44d43b4e"
   }
  },
  "nbformat": 4,
@@ -38,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,14 +77,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "def predict_regression(X, y, test_row, k):\n",
     "    idx_sort = get_neighbors(X, test_row, k)\n",
     "    output_values = y[idx_sort]\n",
-    "    return int(np.mean(output_values))"
+    "    return (np.mean(output_values))"
    ]
   },
   {
@@ -93,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +119,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Age</th>\n      <th>Loan</th>\n      <th>House Price Index</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>25</td>\n      <td>40000</td>\n      <td>135</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>35</td>\n      <td>60000</td>\n      <td>256</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>45</td>\n      <td>80000</td>\n      <td>231</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>20</td>\n      <td>20000</td>\n      <td>267</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>35</td>\n      <td>120000</td>\n      <td>139</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>52</td>\n      <td>18000</td>\n      <td>150</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>23</td>\n      <td>95000</td>\n      <td>127</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>40</td>\n      <td>62000</td>\n      <td>216</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>60</td>\n      <td>100000</td>\n      <td>139</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>48</td>\n      <td>220000</td>\n      <td>250</td>\n    </tr>\n    <tr>\n      <th>10</th>\n      <td>33</td>\n      <td>150000</td>\n      <td>264</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 64
+     "execution_count": 9
     }
    ],
    "source": [
@@ -129,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +153,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 65
+     "execution_count": 10
     }
    ],
    "source": [
@@ -160,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +174,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 66
+     "execution_count": 11
     }
    ],
    "source": [
@@ -188,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,14 +200,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Rotulo Predito: 180\n"
+      "Rotulo Predito: 180.66666666666666\n"
      ]
     }
    ],
@@ -222,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,14 +234,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Rotulo Predito: 202\n"
+      "Rotulo Predito: 202.33333333333334\n"
      ]
     }
    ],
@@ -256,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +290,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>fixed acidity</th>\n      <th>volatile acidity</th>\n      <th>citric acid</th>\n      <th>residual sugar</th>\n      <th>chlorides</th>\n      <th>free sulfur dioxide</th>\n      <th>total sulfur dioxide</th>\n      <th>density</th>\n      <th>pH</th>\n      <th>sulphates</th>\n      <th>alcohol</th>\n      <th>quality</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>7.0</td>\n      <td>0.27</td>\n      <td>0.36</td>\n      <td>20.7</td>\n      <td>0.045</td>\n      <td>45.0</td>\n      <td>170.0</td>\n      <td>1.0010</td>\n      <td>3.00</td>\n      <td>0.45</td>\n      <td>8.8</td>\n      <td>6</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>6.3</td>\n      <td>0.30</td>\n      <td>0.34</td>\n      <td>1.6</td>\n      <td>0.049</td>\n      <td>14.0</td>\n      <td>132.0</td>\n      <td>0.9940</td>\n      <td>3.30</td>\n      <td>0.49</td>\n      <td>9.5</td>\n      <td>6</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>8.1</td>\n      <td>0.28</td>\n      <td>0.40</td>\n      <td>6.9</td>\n      <td>0.050</td>\n      <td>30.0</td>\n      <td>97.0</td>\n      <td>0.9951</td>\n      <td>3.26</td>\n      <td>0.44</td>\n      <td>10.1</td>\n      <td>6</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>7.2</td>\n      <td>0.23</td>\n      <td>0.32</td>\n      <td>8.5</td>\n      <td>0.058</td>\n      <td>47.0</td>\n      <td>186.0</td>\n      <td>0.9956</td>\n      <td>3.19</td>\n      <td>0.40</td>\n      <td>9.9</td>\n      <td>6</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>7.2</td>\n      <td>0.23</td>\n      <td>0.32</td>\n      <td>8.5</td>\n      <td>0.058</td>\n      <td>47.0</td>\n      <td>186.0</td>\n      <td>0.9956</td>\n      <td>3.19</td>\n      <td>0.40</td>\n      <td>9.9</td>\n      <td>6</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 71
+     "execution_count": 16
     }
    ],
    "source": [
@@ -304,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +342,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 73
+     "execution_count": 18
     }
    ],
    "source": [
@@ -351,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
